2005-04-04  Torsten Bronger  <bronger@physik.rwth-aachen.de>  (tiny changes)

	* doc/texinfo.txi: Fix several typos.

2005-04-04  Stepan Kasal  <kasal@ucw.cz>

	* doc/Makefile.am: Fix my previous patch, so that the rules work; and
	  don't modify the path, it's simpler to give help2man the full path.

2005-03-31  Per Bothner  <per@bothner.com>

	* makeinfo/makeinfo.c (maybe_escaped_expansion): Don't start a new
	para during string expansion.

	* makeinfo/xml.c (xml_element_dummy): Dummy variable so that enum
	names get emitted in debug symbols, which helps debugging.

2005-03-31  ezra peisach <epeisach@med-xtal.bu.edu>  (tiny change)

	(bug-texinfo mail 30 Mar 2005 16:40:24 -0500.)
	* defun.h (get_base_type): now takes an enum insertion_type.
	  defun.c (get_base_type): use enum instead of int internally.
	  (defun_internal): takes enum insertion_type instead of int and use
			  enum internally.
	 (cm_defun): ditto.
	* insertion.c (do_enumeration, end_insertion, cm_end): ditto.

2005-03-27  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: remove -- and ^L from inside comments, since
	apparently XML cannot handle them.
	Report from Torsten, bronger@physik.rwth-aachen.de.

	* configure.ac (AC_INIT): quote address.
	(AC_PREREQ): move to after AC_INIT, per current recommendation.

2005-03-25  Stepan Kasal  <kasal@ucw.cz>

	* doc/Makefile.am: help2man should use the native binaries in the
	  build tree, not the one found on $PATH; thanks to Thomas Schwinge
	  for reporting the problem.
	  The rules also make sure the binaries are up-to-date, and generate
	  the man pages in the source tree, not build tree.
	  There is no need to depend on MAINTAINER_MODE, because help2man is
	  handled by the `missing' script.
	(INSTALL_INFO): Comment out; it's not used.
	* Makefile.am (distcleancheck_listfiles): Removed this variable, it
	  doesn't seem to be needed.
	* configure.ac (AC_INIT): Add our bug report address.

2005-03-21  Karl Berry  <karl@gnu.org>
