@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.34.
-.TH MAKEINFO "1" "March 2005" "makeinfo 4.8" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
+.TH MAKEINFO "1" "April 2005" "makeinfo 4.8" "User Commands"
 .SH NAME
 makeinfo \- translate Texinfo documents
 .SH SYNOPSIS
@@ -80,7 +80,6 @@ break Info lines at NUM characters (default 72).
 output footnotes in Info according to STYLE:
 `separate' to put them in their own node;
 `end' to put them at the end of the node
-.IP
 in which they are defined (default).
 .TP
 \fB\-\-paragraph\-indent\fR=\fIVAL\fR
@@ -154,9 +153,9 @@ do not process @iftex and @tex text.
 .TP
 \fB\-\-no\-ifxml\fR
 do not process @ifxml and @xml text.
-.IP
+.P
 Also, for the \fB\-\-no\-ifFORMAT\fR options, do process @ifnotFORMAT text.
-.IP
+.P
 The defaults for the @if... conditionals depend on the output format:
 if generating HTML, \fB\-\-ifhtml\fR is on and the others are off;
 if generating Info, \fB\-\-ifinfo\fR is on and the others are off;
@@ -178,10 +177,15 @@ write DocBook XML to @setfilename
 .TP
 makeinfo \fB\-\-no\-headers\fR foo.texi
 write plain text to standard output
-.IP
-makeinfo \fB\-\-html\fR \fB\-\-no\-headers\fR foo.texi write html without node lines, menus
-makeinfo \fB\-\-number\-sections\fR foo.texi   write Info with numbered sections
-makeinfo \fB\-\-no\-split\fR foo.texi          write one Info file however big
+.TP
+makeinfo \fB\-\-html\fR \fB\-\-no\-headers\fR foo.texi
+write html without node lines, menus
+.TP
+makeinfo \fB\-\-number\-sections\fR foo.texi
+write Info with numbered sections
+.TP
+makeinfo \fB\-\-no\-split\fR foo.texi
+write one Info file however big
 .SH "REPORTING BUGS"
 Email bug reports to bug\-texinfo@gnu.org,
 general questions and discussion to help\-texinfo@gnu.org.
